[gd_scene load_steps=9 format=3 uid="uid://ddbj5ymm52f4s"]

[ext_resource type="Script" path="res://src/scripts/main.gd" id="1_eo6ic"]
[ext_resource type="Texture2D" uid="uid://ba8r3ekdraggj" path="res://assets/images/Shoe.png" id="2_w6tow"]
[ext_resource type="Texture2D" uid="uid://bnl7e6fvdf68w" path="res://assets/images/arm20001.png" id="3_fmpox"]
[ext_resource type="Texture2D" uid="uid://n4wuwd2qaapo" path="res://assets/images/arm10001.png" id="4_auewb"]
[ext_resource type="Texture2D" uid="uid://dkbr8xv7ujn32" path="res://assets/images/legs 10001.png" id="5_l71gw"]
[ext_resource type="Texture2D" uid="uid://cantpkin5yo34" path="res://assets/images/skin.png" id="6_cq8o8"]
[ext_resource type="Texture2D" uid="uid://4j4viihmgbxk" path="res://assets/images/torso0001.png" id="7_rv5of"]
[ext_resource type="Texture2D" uid="uid://c2spgvpg82q1i" path="res://assets/images/head0001.png" id="8_63p65"]

[node name="Main" type="Node2D"]
position = Vector2(-187, 48)
script = ExtResource("1_eo6ic")

[node name="Shoe" type="Sprite2D" parent="."]
position = Vector2(401, 500)
texture = ExtResource("2_w6tow")

[node name="Arm2" type="Sprite2D" parent="."]
position = Vector2(508.5, 277.5)
texture = ExtResource("3_fmpox")

[node name="Arm1" type="Sprite2D" parent="."]
position = Vector2(275.5, 301.5)
texture = ExtResource("4_auewb")

[node name="Legs" type="Sprite2D" parent="."]
position = Vector2(404, 501)
texture = ExtResource("5_l71gw")

[node name="Underlay Thing" type="Sprite2D" parent="."]
position = Vector2(437, 200)
scale = Vector2(1.02533, 1.02533)
texture = ExtResource("6_cq8o8")

[node name="Torso" type="Sprite2D" parent="."]
position = Vector2(435.5, 198.5)
texture = ExtResource("7_rv5of")

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(1248.5, 482.5)
texture = ExtResource("8_63p65")

[node name="PantsG" type="HSlider" parent="."]
offset_left = 551.0
offset_top = 108.0
offset_right = 806.0
offset_bottom = 124.0
max_value = 255.0
value = 60.0

[node name="PantsR" type="HSlider" parent="."]
offset_left = 551.0
offset_top = 86.0
offset_right = 806.0
offset_bottom = 102.0
max_value = 255.0
value = 134.0

[node name="PantsB" type="HSlider" parent="."]
offset_left = 552.0
offset_top = 133.0
offset_right = 807.0
offset_bottom = 149.0
max_value = 255.0
value = 53.0

[node name="Pants Colors" type="RichTextLabel" parent="."]
offset_left = 636.0
offset_top = 67.0
offset_right = 734.0
offset_bottom = 107.0
text = "Pants Colors"

[node name="TorsoG" type="HSlider" parent="."]
offset_left = 551.0
offset_top = 22.0
offset_right = 806.0
offset_bottom = 38.0
max_value = 255.0
value = 114.0

[node name="TorsoR" type="HSlider" parent="."]
offset_left = 551.0
offset_right = 806.0
offset_bottom = 16.0
max_value = 255.0
value = 51.0

[node name="TorsoB" type="HSlider" parent="."]
offset_left = 552.0
offset_top = 47.0
offset_right = 807.0
offset_bottom = 63.0
max_value = 255.0
value = 74.0

[node name="Torso Colors" type="RichTextLabel" parent="."]
offset_left = 636.0
offset_top = -19.0
offset_right = 734.0
offset_bottom = 21.0
text = "Torso Colors"
